src/test/ui/parser/macro/trait-object-macro-matcher.stderr
error: lifetime in trait object type must be followed by `+`
  --> $DIR/trait-object-macro-matcher.rs:11:8
   |
LL |     m!('static);
   |        ^^^^^^^

warning: trait objects without an explicit `dyn` are deprecated
  --> $DIR/trait-object-macro-matcher.rs:11:8
   |
LL |     m!('static);
   |        ^^^^^^^ help: use `dyn`: `dyn 'static`
   |
   = note: `#[warn(bare_trait_objects)]` on by default
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2021!
   = note: for more information, see issue #80165 <https://github.com/rust-lang/rust/issues/80165>

error[E0224]: at least one trait is required for an object type
  --> $DIR/trait-object-macro-matcher.rs:11:8
   |
LL |     m!('static);
   |        ^^^^^^^

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0224`.
